@@ -7,12 +7,8 @@ fanout: 64
 connect_timeout: 15
 command_timeout: 0
 history_size: 100
+color: never
 verbosity: 1
 #ssh_user: root
 #ssh_path: /usr/bin/ssh
 #ssh_options: -oStrictHostKeyChecking=no
-
-[External]
-nodes_all:   nodeset -f < /etc/machines
-nodes_group: awk -F: '/^%(group)s:/ {print $2}' /etc/clustershell/groups | nodeset -f 
-
