@@ -1,5 +1,5 @@
 .\" Man page generated from reStructeredText.
-.TH clush 1 "2010-06-08" "1.3" "ClusterShell User Manual"
+.TH clush 1 "2010-06-15" "1.3" "ClusterShell User Manual"
 .SH NAME
 clush \- execute shell commands on a cluster
 
@@ -248,6 +248,11 @@ fold nodeset using node groups
 .BI \-s\  GROUPSOURCE ,\ \-\-groupsource\fn= GROUPSOURCE
 optional \fBgroups.conf\fP(5) group source to use
 
+
+.TP
+.BI \-\-color\fn= WHENCOLOR
+whether to use ANSI colors to surround node or nodeset prefix/header with escape sequences to display them in color on the terminal. \fIWHENCOLOR\fP is \fBnever\fP, \fBalways\fP or \fBauto\fP (which use color if standard output/error refer to a terminal). Colors are set to [34m (blue foreground text) for stdout and [31m (red foreground text) for stderr, and cannot be modified.
+
 .UNINDENT
 
 .TP
@@ -416,5 +421,5 @@ Stephane Thiell, CEA DAM  <stephane.thiell@cea.fr>
 .SH COPYRIGHT
 CeCILL-C V1
 
-.\" Generated by docutils manpage writer on 2010-06-08 23:12.
+.\" Generated by docutils manpage writer on 2010-06-16 00:54.
 .\" 
