@@ -1,5 +1,5 @@
 .\" Man page generated from reStructeredText.
-.TH clush.conf 5 "2010-04-08" "1.3" "ClusterShell User Manual"
+.TH clush.conf 5 "2010-06-15" "1.3" "ClusterShell User Manual"
 .SH NAME
 clush.conf \- Configuration file for clush
 
@@ -96,6 +96,11 @@ list. Negative values imply unlimited history file size.
 
 
 .TP
+.B color
+Whether to use ANSI colors to surround node or nodeset prefix/header with escape sequences to display them in color on the terminal. Valid arguments are \fBnever\fP, \fBalways\fP or \fBauto\fP (which use color if standard output/error refer to a terminal). Colors are set to [34m (blue foreground text) for stdout and [31m (red foreground text) for stderr, and cannot be modified.
+
+
+.TP
 .B verbosity
 Set the verbosity level: \fI0\fP (quiet), \fI1\fP (default), \fI2\fP (verbose) or more (debug).
 
@@ -132,6 +137,8 @@ connect_timeout: 15
 command_timeout: 0
 .br
 history_size: 100
+.br
+color: auto
 .br
 
 .br
@@ -170,5 +177,5 @@ Stephane Thiell, CEA DAM  <stephane.thiell@cea.fr>
 .SH COPYRIGHT
 CeCILL-C V1
 
-.\" Generated by docutils manpage writer on 2010-04-08 11:56.
+.\" Generated by docutils manpage writer on 2010-06-16 01:00.
 .\" 
