@@ -7,7 +7,7 @@ execute shell commands on a cluster
 -----------------------------------
 
 :Author: Stephane Thiell, CEA DAM  <stephane.thiell@cea.fr>
-:Date:   2010-06-08
+:Date:   2010-06-15
 :Copyright: CeCILL-C V1
 :Version: 1.3
 :Manual section: 1
@@ -123,6 +123,7 @@ Output behaviour:
   -r, --regroup       fold nodeset using node groups
   -s GROUPSOURCE, --groupsource=GROUPSOURCE
                       optional ``groups.conf``\(5) group source to use
+  --color=WHENCOLOR   whether to use ANSI colors to surround node or nodeset prefix/header with escape sequences to display them in color on the terminal. *WHENCOLOR* is ``never``, ``always`` or ``auto`` (which use color if standard output/error refer to a terminal). Colors are set to [34m (blue foreground text) for stdout and [31m (red foreground text) for stderr, and cannot be modified.
 
 File copying:
   -c SOURCE_PATH, --copy=SOURCE_PATH
